client based locale
-renamed server and client classes
-implemented get requests
-using sun jersey api for client
-client uses get instead of post